adding more things to my website

--- a/profile.html
+++ b/profile.html
@@ -14,11 +14,18 @@
         <div class="Profile_header">
             <h2>Profile</h2>
         </div>
-        <div class="main_profile">
-            <p>I graduated in 2019 with a first class degree in Business Management. Whilst this enabled me to understand many traditional business models, the impact of digital and tech on the majority of sectors was of real interest to me. In my final year I joined the University marketing team, working across a number of digital campaigns, and building expertise in creative web development. As a result of this I started to teach myself HTML and CSS, gaining a wider interest in software development as this could be applied to so many fields.</p>
-        </div> 
+        <div class="main_profile"> 
+            <img src="./images/IMG-20210422-WA0001.jpg" alt="">
+            <p>I graduated in 2019 with a first class degree in Business Management. Whilst this enabled me to understand many traditional business models, the impact of digital and tech on the majority of sectors was of real interest to me. In my final year I joined the University marketing team, working across a number of digital campaigns, and building expertise in creative web development. As a result of this I started to teach myself HTML and CSS, gaining a wider interest in software development as this could be applied to so many fields.</p>   
+        </div>   
+        <div class="More_info">
+            <ul>
+                <a href="https://www.linkedin.com/in/benedictlawrence/" id="soical_link"><li>LinkedIn</li></a> 
+                <a href="https://github.com/Ben-glitch-cloud" id="soical_link"><li>Github</li></a> 
+            </ul>
+        </div>
         <div class="work_header">
-            <h2>Work</h2>
+            <h2>Where have a I Worked</h2>
         </div> 
         <div class="work_area">
             <div class="work_item_one_photo">
@@ -26,8 +33,8 @@
             </div> 
             <div class="work_item_one"> 
                 <h3>Social Media and Brand Communication</h3> 
-                <h3>Solent University(2018-2019)</h3>
-                <p>I have gained valuable skills and experience in strategic planning for social media campaigns directed at students. To manage the social media accounts I learnt how to use the Hootsuite platform to schedule daily posts and find relevant topics relating to Solent University activities. Furthermore, I created digital media in the form of images, short videos and gif’s to improve user engagement. Moreover, I was given the responsibility of creating an Instagram Solent alumna instagram account with the purpose of sharing upcoming events and achievements may bypass students. The account now has over 1000 followers and continues to grow. In addition, both the Facebook and Twitter accounts saw a 15% increase in the number of followers. Overall, this experience has been fundamental in growing my interest in digital media and web development.</p>
+                <h3>Solent University (2018-2019)</h3>
+                <p>I have gained valuable skills and experience in strategic planning for social media campaigns directed at students. To manage the social media accounts I learnt how to use the Hootsuite platform to schedule daily posts and find relevant topics relating to Solent University activities. Furthermore, I created digital media in the form of images, short videos and gif’s to improve user engagement. Moreover, I was given the responsibility of creating an Instagram Solent alumni instagram account with the purpose of sharing upcoming events and achievements may bypass students. The account now has over 1000 followers and continues to grow. In addition, both the Facebook and Twitter accounts saw a 15% increase in the number of followers. Overall, this experience has been fundamental in growing my interest in digital media and web development.</p>
             </div>
         </div> 
 
@@ -45,6 +52,17 @@
                 <p>The Makers coding Boot Camp pre-course started with learning the fundamentals of Ruby through challenges which focused on different aspects of the code. This enabled me to understand the language more proficiently when it came to applying these concepts to my projects.
                 I learned to implement the testing framework Rspec alongside the practice of test-driven development (TDD). This greatly assisted me in the debugging of my projects, as I was able to plan and reflect my code appropriately for testing. I would apply this process later to JavaScript with the testing framework Jasmine.</p>
             </div>
+        </div>  
+
+        <div class="Education_area">
+            <div class="Education_area_photo">
+                <img src="./images/solent_university.png" alt="" id="Makers_logo">
+            </div> 
+            <div class="Education_item_one"> 
+                <h3>Southampton Solent University</h3> 
+                <h3>2016 - 2019</h3>
+                <p>Bachelor's degree, Buinesses Managment, Frist class</p>
+            </div>
         </div> 
 
         <div class="Projects">
@@ -52,14 +70,23 @@
         </div>  
 
         <div class="Coding_Projects">
-            <div class="item_one">
-                
+            <div class="item_one" id="projects"> 
+                <a href="https://github.com/Ben-glitch-cloud/RideTheDuck" id="link"> <h3>Ride the Duck</h3>
+                <img id="projects_image" src="./images/duck_star.png"> 
+                <p>A comprehensive iOS app for travellers who want to find a range of relevant information for a specific location. Ie weather, restaurants, hotels, currency exchange.</p></a>
             </div> 
-            <div class="item_two">
+            <div class="item_two" id="projects">  
+                <a href="https://github.com/Ben-glitch-cloud/Chitter_app" id="link">
+                <h3>Messaging app in Ruby</h3>
+                <img src="./images/Messaging_app.gif" alt=""> 
+                <p>A clone of Twitter using Ruby backend.</p></a>
 
             </div>
-            <div class="item_three">
-
+            <div class="item_three" id="projects">  
+                <a href="https://github.com/Ben-glitch-cloud/Chitter-App-JS" id="link">
+                <h3>Messaging in JS</h3>
+                <img src="./images/Chitter_app_git.gif" alt=""> 
+                <p>A clone of Twitter using Node.js backend and Express middleware.</p></a>
             </div>
         </div>
 
@@ -71,11 +98,23 @@
             <ul>
                 <li id="hub">Climbing</li> 
                 <li id="hub">Table Tennis</li>  
-                <li id="hub">Building websites</li> 
+                <li id="hub">Building Applications</li> 
                 <li id="hub"> Walking</li> 
                 <li id="hub">Photography</li>
             </ul>
-        </div>
+        </div> 
+
+        <footer class="end">
+            <div class="end_item">
+                <p>This website was created by Benedict Lawrence</p>
+            </div> 
+            <div class="end_item">
+                <ul>
+                    <a href="https://www.linkedin.com/in/benedictlawrence/" id="soical"><li>LinkedIn</li></a> 
+                    <a href="https://github.com/Ben-glitch-cloud" id="soical"><li>Github</li></a>
+                </ul>
+            </div>
+        </footer> 
 
     </body>
 </html>
