scrolling has been added

--- a/profile.html
+++ b/profile.html
@@ -10,7 +10,17 @@
     <body>
         <header>
             <h1>Benedict Lawrence</h1>
-        </header> 
+        </header>  
+        <nav>
+            <ul>
+                <li id="nav_profile">Profile</li> 
+                <li id="nav_work">Where have I Worked</li> 
+                <li id="nav_education">Education</li> 
+                <li id="nav_projects">Projects</li> 
+                <li id="nav_hobbies">Hobbies</li>
+            </ul>
+        </nav> 
+        
         <div class="Profile_header">
             <h2>Profile</h2>
         </div>
@@ -25,7 +35,7 @@
             </ul>
         </div>
         <div class="work_header">
-            <h2>Where have a I Worked</h2>
+            <h2>Where have I Worked</h2>
         </div> 
         <div class="work_area">
             <div class="work_item_one_photo">
@@ -90,7 +100,7 @@
             </div>
         </div>
 
-        <div class="Projects">
+        <div class="hobbies_header">
             <h2>Hobbies</h2>
         </div>  
         
@@ -115,6 +125,6 @@
                 </ul>
             </div>
         </footer> 
-
+        <script src="./profile.js"></script>
     </body>
 </html>
