letter space in the Project and hobbies

--- a/profile.html
+++ b/profile.html
@@ -108,8 +108,8 @@
             <ul>
                 <li id="hub">Climbing</li> 
                 <li id="hub">Table Tennis</li>  
-                <li id="hub">Building Applications</li> 
-                <li id="hub"> Walking</li> 
+                <li id="hub">Building Web Applications</li> 
+                <li id="hub">Hiking</li> 
                 <li id="hub">Photography</li>
             </ul>
         </div> 
