--- a/profile.html
+++ b/profile.html
@@ -9,12 +9,12 @@
 </head>
     <body>
         <header>
-            <h1>Benedict Lawrence</h1>
+            <h1 class="main_header">Benedict Lawrence</h1>
         </header>  
         <nav>
             <ul>
                 <li id="nav_profile">Profile</li> 
-                <li id="nav_work">Where have I Worked</li> 
+                <li id="nav_work">Work</li> 
                 <li id="nav_education">Education</li> 
                 <li id="nav_projects">Projects</li> 
                 <li id="nav_hobbies">Hobbies</li>
@@ -26,7 +26,7 @@
         </div>
         <div class="main_profile"> 
             <img src="./images/IMG-20210422-WA0001.jpg" alt="">
-            <p>I graduated in 2019 with a first class degree in Business Management. Whilst this enabled me to understand many traditional business models, the impact of digital and tech on the majority of sectors was of real interest to me. In my final year I joined the University marketing team, working across a number of digital campaigns, and building expertise in creative web development. As a result of this I started to teach myself HTML and CSS, gaining a wider interest in software development as this could be applied to so many fields.</p>   
+            <p>I am a highly motivated software developer recently graduated from Makers Academy, having presviously gained a first class degree in Business Management. My degree gave me a good understanding of business and organisational models, however the potential of digital and tech on multiple sectors interests me the most. I enjoyed demonstrable success as a member my University's marketing team, with responsibility for digital campaigns; teaching myself to code, create media assests, and use web publishing software, resulting in increased traffic and engagement. I gained a lot of  satisfaction from the immediate and positive impact I was able to make. I subsequently embarked on building my knowledge of other coding languages. I am looking to secure a junior developer role, where I can contribute to business growth via enhanced user experience, whilst learning and developing new skills.</p>   
         </div>   
         <div class="More_info">
             <ul>
@@ -36,14 +36,24 @@
         </div>
         <div class="work_header">
             <h2>Where have I Worked</h2>
-        </div> 
-        <div class="work_area">
+        </div>  
+        <div class="work_area"> 
+            <div class="work_item_one_photo">
+                <img id="surrey" src="./images/Surrey_County_Council.svg.png" >
+            </div> 
+            <div class="work_item_one">  
+                <h3>Surrey County Council | 2019 April - 2019 June</h3>
+                <h3>Intern Admin</h3> 
+                <p>I was in training to be a frontline call representive for Surrrey County Council, responsible for receiving call from memebers of the public enquiring about county services. I learned how to manage time effectively, liaise with a wide range of stakeholders, and respond in a customer centric way.</p>
+            </div>
+        </div>
+        <div class="work_area"> 
             <div class="work_item_one_photo">
                 <img src="./images/solent_university.png" >
             </div> 
-            <div class="work_item_one"> 
+            <div class="work_item_one">  
+                <h3>Solent University | 2018 October - 2019 April</h3>
                 <h3>Social Media and Brand Communication</h3> 
-                <h3>Solent University (2018-2019)</h3>
                 <p>I have gained valuable skills and experience in strategic planning for social media campaigns directed at students. To manage the social media accounts I learnt how to use the Hootsuite platform to schedule daily posts and find relevant topics relating to Solent University activities. Furthermore, I created digital media in the form of images, short videos and gif’s to improve user engagement. Moreover, I was given the responsibility of creating an Instagram Solent alumni instagram account with the purpose of sharing upcoming events and achievements may bypass students. The account now has over 1000 followers and continues to grow. In addition, both the Facebook and Twitter accounts saw a 15% increase in the number of followers. Overall, this experience has been fundamental in growing my interest in digital media and web development.</p>
             </div>
         </div> 
@@ -58,9 +68,8 @@
             </div> 
             <div class="Education_item_one"> 
                 <h3>MAKERS Coding Bootcamp</h3> 
-                <h3>2020 - 2021</h3>
-                <p>The Makers coding Boot Camp pre-course started with learning the fundamentals of Ruby through challenges which focused on different aspects of the code. This enabled me to understand the language more proficiently when it came to applying these concepts to my projects.
-                I learned to implement the testing framework Rspec alongside the practice of test-driven development (TDD). This greatly assisted me in the debugging of my projects, as I was able to plan and reflect my code appropriately for testing. I would apply this process later to JavaScript with the testing framework Jasmine.</p>
+                <h3>2020 November - 2021 February</h3>
+                <p>I learned to implement the testing framework Rspec alongside the practice of test-driven development (TDD). This greatly assisted me in the debugging of my projects, as I was able to plan and reflect my code appropriately for testing. I would apply this process later to JavaScript with the testing framework Jasmine. Introduced to the design of the model-view-controller(MVC), enabling me to understand areas in which a web application functions to both the user,the programmer, and in regard to the front and back end. Further new areas of practice applied to databases (SQL), frameworks such as Sinatra, and expanding my coding languages with HTML5 and CSS3.</p>
             </div>
         </div>  
 
@@ -70,8 +79,8 @@
             </div> 
             <div class="Education_item_one"> 
                 <h3>Southampton Solent University</h3> 
-                <h3>2016 - 2019</h3>
-                <p>Bachelor's degree, Buinesses Managment, Frist class</p>
+                <h3>2016 September - 2019 June</h3>
+                <p>Bachelor's degree in Buinesses Managment, First class</p>
             </div>
         </div> 
 
@@ -124,7 +133,9 @@
                     <a href="https://github.com/Ben-glitch-cloud" id="soical"><li>Github</li></a>
                 </ul>
             </div>
-        </footer> 
-        <script src="./profile.js"></script>
+        </footer>  
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/animejs/3.2.1/anime.min.js"></script>
+        <script src="./profile.js"></script> 
+        <script src="./anime.min.js"></script>   
     </body>
 </html>
