--- a/profile.html
+++ b/profile.html
@@ -56,6 +56,17 @@
                 <h3>Social Media and Brand Communication</h3> 
                 <p>I have gained valuable skills and experience in strategic planning for social media campaigns directed at students. To manage the social media accounts I learnt how to use the Hootsuite platform to schedule daily posts and find relevant topics relating to Solent University activities. Furthermore, I created digital media in the form of images, short videos and gif’s to improve user engagement. Moreover, I was given the responsibility of creating an Instagram Solent alumni instagram account with the purpose of sharing upcoming events and achievements may bypass students. The account now has over 1000 followers and continues to grow. In addition, both the Facebook and Twitter accounts saw a 15% increase in the number of followers. Overall, this experience has been fundamental in growing my interest in digital media and web development.</p>
             </div>
+        </div>  
+
+        <div class="work_area"> 
+            <div class="work_item_one_photo">
+                <img id="rac" src="./images/RAC.png" >
+            </div> 
+            <div class="work_item_one">  
+                <h3>Royal Automobile Club | June 2018 - August 2018 | May 2017 - September 2017</h3>
+                <h3>Club Waiter</h3>  
+                <p>I've worked as a full-time temporary waiter for two summers in the RAC Fountain Restaurant, (capacity 120 covers) with responsibility for seven tables and up to forty covers.</p>
+            </div>
         </div> 
 
         <div class="Education_header">
