updating nav bar

--- a/index.html
+++ b/index.html
@@ -19,7 +19,17 @@
                 <li id="nav_projects">Projects</li> 
                 <li id="nav_hobbies">Hobbies</li>
             </ul>
-        </nav> 
+        </nav>  
+
+        <div id="second_nav">
+            <ul>
+                <li id="nav_profile_2">Profile</li> 
+                <li id="nav_work_2">Work</li> 
+                <li id="nav_education_2">Education</li> 
+                <li id="nav_projects_2">Projects</li> 
+                <li id="nav_hobbies_2">Hobbies</li>
+            </ul>
+        </div>
         
         <div class="Profile_header">
             <h2>Profile</h2>
@@ -108,7 +118,7 @@
             <div class="item_two" id="projects">  
                 <a href="https://github.com/Ben-glitch-cloud/Chitter_app" id="link">
                 <h3>Messaging app in Ruby</h3>
-                <img src="./images/Messaging_app.gif" alt=""> 
+                <img src="./images/Weather_app.gif" alt=""> 
                 <p>A clone of Twitter using Ruby backend.</p></a>
 
             </div>
