adding new elements

--- a/index.html
+++ b/index.html
@@ -28,9 +28,14 @@
                 <li id="nav_education_2">Education</li> 
                 <li id="nav_projects_2">Projects</li> 
                 <li id="nav_hobbies_2">Hobbies</li>
-            </ul>
+            </ul> 
+        </div> 
+
+        <div id="second_nav_bar">
+
         </div>
-        
+    
+
         <div class="Profile_header">
             <h2>Profile</h2>
         </div>
