new work exsperence has been add

--- a/index.html
+++ b/index.html
@@ -54,6 +54,16 @@
         </div>  
         <div class="work_area"> 
             <div class="work_item_one_photo">
+                <img id="IMG" src="./images/IMG_logo.jpeg" >
+            </div> 
+            <div class="work_item_one">  
+                <h3>Interactive Media Group IMG | 2021 July - 2021 October</h3>
+                <h3>Full Stack Software Developer</h3> 
+                <p>Interactive Media Group is a fast growing software solutions provider. My responsibilites include creating a satisfying user experience with modern UX and UI design, building user appliction with principles of clean code anf test driven developemnt. Furthermre, I review client expriencess so the team can make appropraite adjustment to the ongoing proaduct</p>
+            </div>
+        </div>
+        <div class="work_area"> 
+            <div class="work_item_one_photo">
                 <img id="surrey" src="./images/Surrey_County_Council.svg.png" >
             </div> 
             <div class="work_item_one">  
