screen for the website

--- a/index.html
+++ b/index.html
@@ -34,14 +34,17 @@
         <div id="second_nav_bar">
 
         </div>
-    
 
         <div class="Profile_header">
             <h2>Profile</h2>
         </div>
         <div class="main_profile"> 
-            <img src="./images/IMG-20210422-WA0001.jpg" alt="">
-            <p>I am a highly motivated software developer recently graduated from Makers Academy, having presviously gained a first class degree in Business Management. My degree gave me a good understanding of business and organisational models, however the potential of digital and tech on multiple sectors interests me the most. I enjoyed demonstrable success as a member my University's marketing team, with responsibility for digital campaigns; teaching myself to code, create media assests, and use web publishing software, resulting in increased traffic and engagement. I gained a lot of  satisfaction from the immediate and positive impact I was able to make. I subsequently embarked on building my knowledge of other coding languages. I am looking to secure a junior developer role, where I can contribute to business growth via enhanced user experience, whilst learning and developing new skills.</p>   
+            <div class="main_profile_item">
+                <img src="./images/IMG-20210422-WA0001.jpg" alt="" class="profile_image">
+            </div>
+            <div class="main_profile_item_one">
+                <p>I am a highly motivated software developer recently graduated from Makers Academy, having presviously gained a first class degree in Business Management. My degree gave me a good understanding of business and organisational models, however the potential of digital and tech on multiple sectors interests me the most. I enjoyed demonstrable success as a member my University's marketing team, with responsibility for digital campaigns; teaching myself to code, create media assests, and use web publishing software, resulting in increased traffic and engagement. I gained a lot of  satisfaction from the immediate and positive impact I was able to make. I subsequently embarked on building my knowledge of other coding languages. I am looking to secure a junior developer role, where I can contribute to business growth via enhanced user experience, whilst learning and developing new skills.</p>   
+            </div>
         </div>   
         <div class="More_info">
             <ul>
