New projects added

--- a/index.html
+++ b/index.html
@@ -134,17 +134,17 @@
                 <p>A comprehensive iOS app for travellers who want to find a range of relevant information for a specific location. Ie weather, restaurants, hotels, currency exchange.</p></a>
             </div> 
             <div class="item_two" id="projects">  
-                <a href="https://github.com/Ben-glitch-cloud/Chitter_app" id="link">
-                <h3>Messaging app in Ruby</h3>
-                <img src="./images/Weather_app.gif" alt=""> 
-                <p>A clone of Twitter using Ruby backend.</p></a>
+                <a href="https://github.com/Ben-glitch-cloud/Message_Board_Web_App" id="link">
+                <h3>Full stack Twitter Clone</h3>
+                <img src="./images/Chitter_app_git.gif" alt=""> 
+                <p>A clone of Twitter ustilising the MERN stack (Mongodb, Express, React, Nodejs).</p></a>
 
             </div>
             <div class="item_three" id="projects">  
-                <a href="https://github.com/Ben-glitch-cloud/Chitter-App-JS" id="link">
-                <h3>Messaging in JS</h3>
-                <img src="./images/Chitter_app_git.gif" alt=""> 
-                <p>A clone of Twitter using Node.js backend and Express middleware.</p></a>
+                <a href="https://github.com/eds-101/returnsPortal" id="link">
+                <h3>Returns Package Portal </h3>
+                <img src="./images/Package_to_return.gif" alt=""> 
+                <p>A freelance project ustilising the Javascript library React to process customer returns.</p></a>
             </div>
         </div>
 
