new animation add to the header

--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
 </head>
     <body>
         <header>
-            <h1 class="main_header">Benedict Lawrence</h1>
+            <h1 class="main_header">Benedict Lawrence</h1> 
+            <p>Front-end Software Developer</p>
         </header>  
         <nav>
             <ul>
