--- a/index.html
+++ b/index.html
@@ -39,24 +39,51 @@
         <div class="Profile_header">
             <h2>Profile</h2>
         </div>
-        <div class="main_profile"> 
+        <div id="main_profile"> 
             <div class="main_profile_item">
                 <img src="./images/IMG-20210422-WA0001.jpg" alt="" class="profile_image">
             </div>
             <div class="main_profile_item_one">
                 <p>I am a highly motivated software developer recently graduated from Makers Academy, having presviously gained a first class degree in Business Management. My degree gave me a good understanding of business and organisational models, however the potential of digital and tech on multiple sectors interests me the most. I enjoyed demonstrable success as a member my University's marketing team, with responsibility for digital campaigns; teaching myself to code, create media assests, and use web publishing software, resulting in increased traffic and engagement. I gained a lot of  satisfaction from the immediate and positive impact I was able to make. I subsequently embarked on building my knowledge of other coding languages. I am looking to secure a junior developer role, where I can contribute to business growth via enhanced user experience, whilst learning and developing new skills.</p>   
             </div>
-        </div>   
+        </div>     
+        
         <div class="More_info">
             <ul>
                 <a href="https://www.linkedin.com/in/benedictlawrence/" id="soical_link"><li>LinkedIn</li></a> 
                 <a href="https://github.com/Ben-glitch-cloud" id="soical_link"><li>Github</li></a> 
             </ul>
+        </div> 
+
+        <div class="Projects">
+            <h2>Projects</h2>
+        </div>  
+
+        <div class="Coding_Projects" id="projects">
+            <div class="item_one" id="project_one"> 
+                <a href="https://github.com/Ben-glitch-cloud/RideTheDuck" id="link"> <h3>Ride the Duck</h3>
+                <img id="projects_image" src="./images/duck_star.png"> 
+                <p>A comprehensive iOS app for travellers who want to find a range of relevant information for a specific location. Ie weather, restaurants, hotels, currency exchange.</p></a>
+            </div> 
+            <div class="item_two" id="projects_two">  
+                <a href="https://github.com/Ben-glitch-cloud/Message_Board_Web_App" id="link">
+                <h3>Full stack Twitter Clone</h3>
+                <img src="./images/Chitter_app_git.gif" alt=""> 
+                <p>A clone of Twitter ustilising the MERN stack (Mongodb, Express, React, Nodejs).</p></a>
+
+            </div>
+            <div class="item_three" id="projects_three">  
+                <a href="https://github.com/eds-101/returnsPortal" id="link">
+                <h3>Returns Package Portal </h3>
+                <img src="./images/Package_to_return.gif" alt=""> 
+                <p>A freelance project ustilising the Javascript library React to process customer returns.</p></a>
+            </div>
         </div>
+
         <div class="work_header">
             <h2>Where have I Worked</h2>
         </div>  
-        <div class="work_area"> 
+        <div class="work_area" id="work_area_one"> 
             <div class="work_item_one_photo">
                 <img id="IMG" src="./images/IMG_logo.jpeg" >
             </div> 
@@ -66,7 +93,7 @@
                 <p>Interactive Media Group is a fast growing software solutions provider. My responsibilites include creating a satisfying user experience with modern UX and UI design, building user appliction with principles of clean code anf test driven developemnt. Furthermre, I review client expriencess so the team can make appropraite adjustment to the ongoing proaduct</p>
             </div>
         </div>
-        <div class="work_area"> 
+        <div class="work_area" id="work_area_two"> 
             <div class="work_item_one_photo">
                 <img id="surrey" src="./images/Surrey_County_Council.svg.png" >
             </div> 
@@ -76,7 +103,7 @@
                 <p>I was in training to be a frontline call representive for Surrrey County Council, responsible for receiving call from memebers of the public enquiring about county services. I learned how to manage time effectively, liaise with a wide range of stakeholders, and respond in a customer centric way.</p>
             </div>
         </div>
-        <div class="work_area"> 
+        <div class="work_area" id="work_area_three"> 
             <div class="work_item_one_photo">
                 <img src="./images/solent_university.png" >
             </div> 
@@ -87,7 +114,7 @@
             </div>
         </div>  
 
-        <div class="work_area"> 
+        <div class="work_area" id="work_area_four"> 
             <div class="work_item_one_photo">
                 <img id="rac" src="./images/RAC.png" >
             </div> 
@@ -102,7 +129,7 @@
             <h2>Education</h2>
         </div>    
         
-        <div class="Education_area">
+        <div class="Education_area" id="Education_area_one">
             <div class="Education_area_photo">
                 <img src="./images/Makers_coding_logo.png" alt="" id="Makers_logo">
             </div> 
@@ -113,7 +140,7 @@
             </div>
         </div>  
 
-        <div class="Education_area">
+        <div class="Education_area" id="Education_area_two">
             <div class="Education_area_photo">
                 <img src="./images/solent_university.png" alt="" id="Makers_logo">
             </div> 
@@ -123,31 +150,6 @@
                 <p>Bachelor's degree in Buinesses Managment, First class</p>
             </div>
         </div> 
-
-        <div class="Projects">
-            <h2>Projects</h2>
-        </div>  
-
-        <div class="Coding_Projects">
-            <div class="item_one" id="projects"> 
-                <a href="https://github.com/Ben-glitch-cloud/RideTheDuck" id="link"> <h3>Ride the Duck</h3>
-                <img id="projects_image" src="./images/duck_star.png"> 
-                <p>A comprehensive iOS app for travellers who want to find a range of relevant information for a specific location. Ie weather, restaurants, hotels, currency exchange.</p></a>
-            </div> 
-            <div class="item_two" id="projects">  
-                <a href="https://github.com/Ben-glitch-cloud/Message_Board_Web_App" id="link">
-                <h3>Full stack Twitter Clone</h3>
-                <img src="./images/Chitter_app_git.gif" alt=""> 
-                <p>A clone of Twitter ustilising the MERN stack (Mongodb, Express, React, Nodejs).</p></a>
-
-            </div>
-            <div class="item_three" id="projects">  
-                <a href="https://github.com/eds-101/returnsPortal" id="link">
-                <h3>Returns Package Portal </h3>
-                <img src="./images/Package_to_return.gif" alt=""> 
-                <p>A freelance project ustilising the Javascript library React to process customer returns.</p></a>
-            </div>
-        </div>
 
         <div class="hobbies_header">
             <h2>Hobbies</h2>
